Fix placeholder.
Our z-index -1 hack stopped working.  It was pretty fragile and
something in the layout broke it.  Use pointer-events: none instead.

Fixes #261

--- a/stylesheets/_thread.scss
+++ b/stylesheets/_thread.scss
@@ -175,7 +175,7 @@ $asideBackground: $accent2;
             .f-placeholder {
                 position: absolute;
                 padding: $msgPadding;
-                z-index: -1;
+                pointer-events: none;
                 top: 0;
                 left: 0;
                 opacity: 0.33;
